# shmcs

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/shmcs/: chained-hashtable.hh  handler.hh  hashtable.hh  linkedlist.hh  server.hh  spmc.hh  types.hh  utils.hh
include/shmcs/handler/: handler.hh  server.hh
include/shmcs/network/: connection.hh  server.hh
lib/: connection.cc  server.cc
lib/handler/: server.cc
lib/message/: shm.proto
lib/network/: connection.cc  server.cc
src/: client.cc  server.cc
tests/unit/: chained-hashtable-test.cc  hashtable-test.cc  linkedlist-test.cc
